# quantcore-indicators

./: .gitignore  BACKEND_CODE_INSPECTION_REPORT.md  BCRYPT_COMPATIBILITY_FIX.md  BUGFIX_REPORT.md  BUGFIX_REPORT_COMPLETE.md  CACHE_ASYNC_BATCH_OPTIMIZATION_REPORT.md  CHANGELOG_EASTMONEY.md  CHANGELOG_EASTMONEY_V1.1.md  CHANGELOG_EASTMONEY_V1.2.md  CHANGELOG_EASTMONEY_V1.3.md  CODE_CHECK_AND_FIX_REPORT.md  CODE_CHECK_REPORT.md  CODE_INSPECTION_FINAL_REPORT.md  CODE_INSPECTION_REPORT.md  CODE_INSPECTION_REPORT_2026.md  CODE_INSPECTION_REPORT_2026_COMPLETE.md  CODE_INSPECTION_REPORT_FINAL.md  CODE_ISSUES_FIX_REPORT.md  CODE_REVIEW_REPORT.md  CRITICAL_ISSUES_FIX_COMPLETE_REPORT.md  CRITICAL_ISSUES_FIX_REPORT.md  DAILY_API_INTEGRATION.md  DAILY_MARKET_FRONTEND_INTEGRATION.md  DATA_LOADING_OPTIMIZATION_SUMMARY.md  EASTMONEY_FEATURE.md  EFINANCE_TYPE_HINTS_OPTIMIZATION.md  FINAL_BUGFIX_SUMMARY.md  FINAL_CODE_CHECK_REPORT.md  FINAL_CODE_FIX_REPORT.md  FINAL_TUSHARE_SETUP_COMPLETE.md  FRONTEND_CODE_INSPECTION_REPORT.md  FRONTEND_CODE_OPTIMIZATION_REPORT.md  FRONTEND_DATA_FIX.md  FRONTEND_DEBUG.md  FRONTEND_DEBUG_GUIDE.md  FRONTEND_DISPLAY_FIX.md  FRONTEND_PERFORMANCE_OPTIMIZATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_REPORT_20260428.md  IMPLEMENTATION_PLAN_20260428.md  (+90 more)
quantcore/: BATCH_QUOTES_IMPORT_VERIFICATION.md  CHANGELOG.md  CHANGELOG_v0.2.0.md  CHANGELOG_v0.3.0.md  CHANGELOG_v0.4.0.md  COMPETITOR_ANALYSIS.md  COMPLETE_FINAL_REPORT.md  COMPLETION_REPORT.md  COMPREHENSIVE_CODE_INSPECTION_REPORT.md  DEVELOPMENT_PLAN.md  DI_VALIDATION_FIX.md  FINAL_COMPLETION_REPORT.md  FINAL_REPORT.md  FIRST_STEP_COMPLETED.md  FOLLOWUP_FIX_SUMMARY.md  FRAMEWORK_ANALYSIS_REPORT.md  IMPLEMENTATION_PLAN.md  OPTIMIZATION_IMPLEMENTATION_GUIDE.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  POSITIONING.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  PROJECT_SUMMARY_v0.2.md  QUICK_START.md  README.md  SMART_REALTIME_IMPORT_FIX.md  STATUS_REPORT.md  STEP2_COMPLETED.md  STEP3_COMPLETED.md  USER_GUIDE.md  VERSION_0.1.2_REPORT.md  VISUALIZATION_GUIDE.md  WEBSOCKET_AND_API_FIXES.md  WEBSOCKET_FIX_SUMMARY.md  apply_websocket_fixes.py  batch_optimize_endpoints.py  clean_internal_imports.py  comprehensive_code_inspector.py  example_quickstart.py  (+31 more)
quantcore-indicators/: BUILD.md  Cargo.toml  DEPENDENCY_VERSIONS.md  DEVELOPMENT_STATUS.md  DUAL_BACKEND_ARCHITECTURE.md  PERFORMANCE_BENCHMARK.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RUST_EXTENSION_DIAGNOSIS.md  VERSION_MIGRATION_GUIDE.md  ZERO_COPY_EXAMPLE.md  accuracy_test.py  adx_optimization.py  build.sh  build_and_install.bat  build_optimized.bat  cargo_check_err.txt  check_compatibility.py  diagnose_rust.py  pyproject.toml  verify_install.py  优化方案_20260428.md  对比报告_20260428.md  对比报告_Rust_vs_pandas_ta.md
quantcore-indicators/%TEMP%/pyo3-test/: Cargo.toml
quantcore-indicators/benches/indicators_benchmark/: Cargo.toml
quantcore-indicators/benches/indicators_benchmark/src/: main.rs
quantcore-indicators/benchmarks/: comparison_test.py  final_comparison.py  indicator_count_comparison.py  rust_only_benchmark.py
quantcore-indicators/examples/: usage_examples.py
quantcore-indicators/python/quantcore_indicators/: __init__.py
quantcore-indicators/src/: arrow_backend.rs  arrow_support.rs  core.rs  lib.rs  numpy_backend.rs  pyo3_bindings.rs
quantcore-indicators/tests/: test_indicators.py
quantcore/docs/: archive
quantcore/examples/: advanced_strategies.py  multi_strategy_portfolio.py  strategies.py  strategy_templates_example.py  visualization_example.py
quantcore/python-api/: requirements-anti-detection.txt
quantcore/python-api/quantcore/: __init__.py  exceptions.py  indicators.py  indicators_vectorized.py  logger.py  optimizer.py  plotting.py  risk.py
quantcore/python-api/quantcore/alpha/: __init__.py  factory.py
quantcore/python-api/quantcore/alpha/alternative/anti_detection/: __init__.py  adaptive_limiter.py  coordinator.py  (+7 more)
quantcore/python-api/quantcore/alpha/engine/: __init__.py  calculator.py  engine.py  pipeline.py  registry.py
quantcore/python-api/quantcore/alpha/examples/: usage_examples.py
quantcore/python-api/quantcore/alpha/factors/: __init__.py  alternative.py  fundamental.py  market.py  structured.py
quantcore/python-api/quantcore/alpha/optimizer/: __init__.py  base.py  black_litterman.py  factor_constraints.py  max_diversification.py  mean_variance.py  risk_parity.py  transaction_cost.py
quantcore/python-api/quantcore/alpha/research/: __init__.py  factor_tester.py  ic_analysis.py  layered_backtest.py
quantcore/python-api/quantcore/alpha/risk/: __init__.py  barra_model.py  covariance.py  risk_attribution.py
quantcore/python-api/quantcore/alpha/storage/: __init__.py  factor_db.py  parquet_backend.py
quantcore/python-api/quantcore/core/: __init__.py
quantcore/python-api/quantcore/data/: __init__.py  loader.py  loader_fixed.py  realtime.py  resample.py
quantcore/python-api/quantcore/engine/: __init__.py
quantcore/python-api/quantcore/performance/: __init__.py  analyzer.py
quantcore/python-api/quantcore/risk/: __init__.py  manager.py
quantcore/python-api/quantcore/strategy/: __init__.py  base.py.backup.original  base_fixed.py  cta.py  portfolio.py  templates.py
quantcore/python-api/quantcore/trading/: __init__.py  gateway.py
quantcore/rust-engine/: Cargo.toml
quantcore/rust-engine/src/: lib.rs
quantcore/rust-engine/src/core/: bar.rs  mod.rs  order.rs  portfolio.rs  position.rs  tick.rs  trade.rs
quantcore/rust-engine/src/data/: cache.rs  feed.rs  loader.rs  mod.rs
quantcore/rust-engine/src/data/adapters/: mod.rs
quantcore/rust-engine/src/engine/: backtest.rs  backtest_v2.rs  matching.rs  mod.rs
quantcore/rust-engine/src/performance/: analyzer.rs  math.rs  metrics.rs  mod.rs  reporter.rs
quantcore/rust-engine/src/risk/: limits.rs  manager.rs  mod.rs  monitor.rs
quantcore/rust-engine/src/strategy/: base.rs  context.rs  mod.rs  runner.rs
quantcore/rust-engine/src/utils/: errors.rs  helpers.rs  logging.rs  mod.rs
quantcore/tests/: test_optimization_validation.py
(+962 files in other folders)
