[package]
name = "quantcore-indicators"
version = "0.1.0"
edition = "2024"
authors = ["QuantCore Team"]
description = "High-performance financial indicators library powered by Rust"
license = "MIT"
repository = "https://github.com/quantcore/indicators"
documentation = "https://docs.rs/quantcore-indicators"
readme = "README.md"
keywords = ["finance", "indicators", "trading", "quant", "pyo3"]
categories = ["finance", "science"]

[lib]
name = "quantcore_indicators"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[features]
default = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
target-cpu = "native"
