[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "quantcore"
version = "0.1.0"
description = "高性能量化交易框架 - Rust 引擎 + Python 接口"
authors = [
    {name = "QuantCore Team", email = "quantcore@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = [
    "quant",
    "trading",
    "backtest",
    "finance",
    "rust",
    "python"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "quantcore-indicators>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
]

data = [
    "baostock>=0.8",
    "xtquant>=0.0.1",
]

docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.4",
    "mkdocstrings[python]>=0.23",
]

[project.urls]
Homepage = "https://github.com/quantcore/quantcore"
Documentation = "https://quantcore.readthedocs.io"
Repository = "https://github.com/quantcore/quantcore"
Issues = "https://github.com/quantcore/quantcore/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python-api"
module-name = "quantcore.quantcore_engine"
manifest-path = "rust-engine/Cargo.toml"

[tool.black]
line-length = 100
target-version = ['py314']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py314"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (black handles this)
    "B008", # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["python-api/tests"]
python_files = "test_*.py"
python_functions = "test_*"
